--- a/ChessDotNet.AI/ChessDotNet.AI.csproj
+++ b/ChessDotNet.AI/ChessDotNet.AI.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="ChessDotNet" Version="0.11.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Collections\" />
+  </ItemGroup>
+
 </Project>
